// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a disabled toggle that is enabled 1`] = `
.c0 {
  background-color: #ccc;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #888;
  margin-left: -2px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    Off
  </span>
</div>
`;

exports[`a disabled toggle that is enabled 2`] = `
.c0 {
  background-color: #a5d6a7;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #64a60a;
  margin-left: 12px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    On
  </span>
</div>
`;

exports[`a disabled toggle which matches the snapshot 1`] = `
.c0 {
  background-color: #ccc;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #888;
  margin-left: -2px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    Off
  </span>
</div>
`;

exports[`an enabled toggle that is disabled 1`] = `
.c0 {
  background-color: #a5d6a7;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #64a60a;
  margin-left: 12px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    On
  </span>
</div>
`;

exports[`an enabled toggle that is disabled 2`] = `
.c0 {
  background-color: #ccc;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #888;
  margin-left: -2px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    Off
  </span>
</div>
`;

exports[`an enabled toggle which matches the snapshot 1`] = `
.c0 {
  background-color: #a5d6a7;
  border-radius: 7px;
  height: 14px;
  width: 30px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c0:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c1 {
  background-color: #64a60a;
  margin-left: 12px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 20px;
  width: 20px;
  position: absolute;
  margin-top: -3px;
}

.c2 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 30px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="c0"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="c1"
    />
  </div>
  <span
    aria-hidden="true"
    className="c2"
  >
    On
  </span>
</div>
`;
